--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="row">
 
              <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/maestro.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/maestro.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Maestro</i>
@@ -114,7 +114,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Bop It Extreme Home Edition</i>
@@ -126,7 +126,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>The Soundbearier</i>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>The Sea</i>
@@ -150,7 +150,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/ripple-blossom.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/ripple-blossom.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Ripple Blossom</i>
@@ -162,7 +162,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Primal Life</i>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https:///www.yidzhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
+                <a href="http:///www.yidzhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Dual Balance</i>
@@ -186,7 +186,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidzhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidzhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>YiCon</i>
@@ -198,7 +198,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="https://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Primal Space</i>
