--- a/ripple-blossom.html
+++ b/ripple-blossom.html
@@ -36,7 +36,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
+            <a class="navbar-brand" href="http://www.yidizhu.com">Yidi Zhu</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
