--- a/yicon.html
+++ b/yicon.html
@@ -36,7 +36,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
+            <a class="navbar-brand" href="http://www.yidizhu.com">Yidi Zhu</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,31 +66,33 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="padding-top:100px">
+<div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <div class="modal-body">
+            <article>
                 <h2 style="text-align: center">YiCon</h2>
                 <hr class="star-primary">
                 <div style="text-align: center">
-                    <p>
+                    <ul>
+                    <li>
                         <strong>Date:</strong> November 2016
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <strong>Type:</strong> Serious Game - Construction Simulation
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <strong>Role:</strong> Game designer & programmer
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i
                                 class="fa fa-download" aria-hidden="true"></i> Download</a>
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <a href="resources/articles/fyp/user's-manual.pdf"><i class="fa fa-book"
                                                                               aria-hidden="true"></i> User's
                             Manual</a>
-                    </p>
+                    </li>
+                </ul>
                 </div>
                 <hr class="star-primary">
                 <div class="portfolio-description">
@@ -123,7 +125,7 @@
                     </p>
                 </div>
 
-            </div>
+            </article>
 
             <div id="disqus_thread"></div>
             <script>
