--- a/dual-balance.html
+++ b/dual-balance.html
@@ -36,7 +36,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
+            <a class="navbar-brand" href="http://www.yidizhu.com">Yidi Zhu</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,26 +66,28 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="padding-top:100px">
+<div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <div class="modal-body">
+            <article>
                 <h2 style="text-align: center">Dual Balance</h2>
                 <hr class="star-primary">
-                <div  style="text-align: center">
-                    <p>
+                <div>
+                    <ul>
+                    <li>
                         <strong>Date:</strong> November 2016
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <strong>Type:</strong> 3D cooperation mobile game
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <strong>My role:</strong> Game designer & programmer
-                    </p>
-                    <p>
+                    </li>
+                    <li>
                         <a href="https://github.com/COMP4122/COMP3432-Innovative-Computing-Paradigm/releases/tag/alpha6"><i
                                 class="fa fa-download" aria-hidden="true"></i> Download (Android only)</a>
-                    </p>
+                    </li>
+                    </ul>
                 </div>
                 <hr class="star-primary">
                 <div class="portfolio-description">
@@ -114,7 +116,7 @@
                         people.</p>
                 </div>
 
-            </div>
+            </article>
 
             <div id="disqus_thread"></div>
             <script>
