--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <!--<img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt=""> -->
                 <div class="intro-text">
                     <span class="quote">Games are handcrafts. I'm a craftsman.</span>
+                    <button style="font-size:400%; width: 800px; height: 500px">This is for you Jake! Trade your soul for buttons!</button>
                     <hr class="star-light">
                     <p class="bio col-lg-8 col-lg-offset-2 text-center">
                         Hi there, I'm Yidi! I am a passionate <b>game designer and developer</b>. I dedicate myself to making
