--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">BVW Round 2 | <i>Producer & Programmer </i></p>
+                <p class="portfolio-title">Course Project | <i>Producer & Programmer </i></p>
             </div>
 
             <div class="col-md-4 portfolio-item">
@@ -122,7 +122,7 @@
                     </div>
                     <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">BVW Round 3 | <i>Carpentar & Programmer</i></p>
+                <p class="portfolio-title">Course Project | <i>Carpentar & Programmer</i></p>
             </div>
 
             <div class="col-md-4 portfolio-item">
@@ -134,7 +134,7 @@
                     </div>
                     <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">BVW Round 1 | <i>Programmer </i></p>
+                <p class="portfolio-title">Course Project | <i>Programmer </i></p>
             </div>
 
             <div class="col-md-4 portfolio-item">
@@ -146,7 +146,7 @@
                     </div>
                     <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">BVW Round 0 | <i>Solo Developer </i></p>
+                <p class="portfolio-title">Course Project | <i>Solo Developer </i></p>
             </div>
 
             <div class="col-md-4 portfolio-item">
