fix broken links

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="http:///www.yidzhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
+                <a href="http:///www.yidizhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Dual Balance</i>
@@ -186,7 +186,7 @@
             </div>
 
             <div class="col-md-4 portfolio-item">
-                <a href="http://www.yidzhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>YiCon</i>
