--- a/primal-life.html
+++ b/primal-life.html
@@ -118,7 +118,6 @@
                         implement during the project’s time frame. So I get a better sense of scoping during game design
                         and managing the whole process of game development.
                     </p>
-                    <p>This project is just finished, I'll update the details later on.</p>
                 </div>
 
             </article>
@@ -135,14 +134,17 @@
     <div class="footer-above">
         <div class="container">
             <div class="row">
-                <div class="footer-col col-md-6">
-                    <h3>Location</h3>
-                    <p>The Hong Kong Polytechnic University
-                        <br>Hung Hom, Hong Kong, China, 999077</p>
-                </div>
-                <div class="footer-col col-md-6">
-                    <h3>CONTACT</h3>
+                <div class="footer-col col-md-8 col-md-offset-2">
+                    <h3>Contact</h3>
                     <ul class="list-inline">
+                        <li>
+                            <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
+                                    class="fa fa-envelope"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
+                                    class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+                        </li>
                         <li>
                             <a href="https://www.facebook.com/zhuyidiwow" class="btn-social btn-outline"><i
                                     class="fa fa-fw fa-facebook"></i></a>
@@ -155,12 +157,9 @@
                             <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i
                                     class="fa fa-fw fa-weibo"></i></a>
                         </li>
-                        <li>
-                            <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
-                                    class="fa fa-envelope"></i></a>
-                        </li>
+                        
+                        
                     </ul>
-                    Please let me know if you find any bugs on this site, thanks!
                 </div>
             </div>
         </div>
@@ -169,7 +168,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Yidi Zhu 2016
+                    Copyright &copy; Yidi Zhu 2017. Adapted from <a
+                        href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>. Full source code available <a
+                        href="https://github.com/zhuyidiwow/zhuyidiwow.github.io">here</a>
                 </div>
             </div>
         </div>
