--- a/maestro.html
+++ b/maestro.html
@@ -45,10 +45,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="https://www.yidizhu.com/#portfolio">Portfolio</a>
+                    <a href="http://www.yidizhu.com/#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="https://medium.com/yidis-blog" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    <a href="hhttp://www.yidizhu.com/blog.html" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </li>
                 <li class="page-scroll">
                     <a href="resources/resume.pdf" target="_blank">Resume <i class="fa fa-external-link" aria-hidden="true"></i></a>
