--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="https://medium.com/yidis-blog" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    <a href="http://www.yidizhu.com/blog.html" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </li>
                 <li class="page-scroll">
                     <a href="resources/resume.pdf" target="_blank">Resume <i class="fa fa-external-link" aria-hidden="true"></i></a>
