--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2>Portfolio</h2>
-                <hr class="star-primary">
+                <hr class="star-light">
             </div>
         </div>
         <div class="row">
