--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <span class="quote">Games are handcrafts. I'm a craftsman.</span>
                     <hr class="star-light">
                     <p class="bio col-lg-8 col-lg-offset-2 text-center">
-                        Hi there, I'm Yidi! I am a passionate <b>game designer and developer</b>. I dedicate myself to making
+                        Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I dedicate myself to making
                             intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay
                             engineer.
                         <br> <br>
@@ -252,7 +252,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Yidi Zhu 2017. Adapted from <a
+                    Copyright &copy; Yidi Zhu 2017. Re-designed from <a
                         href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>. Full source code available <a
                         href="https://github.com/zhuyidiwow/zhuyidiwow.github.io">here</a>
                 </div>
