--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
+            <a class="navbar-brand" href="http://www.yidizhu.com">Yidi Zhu</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,7 +73,7 @@
         </div>
         <div class="row">
 
-             <a href="http://www.yidizhu.com/articles/a-comparative-study" class="col-lg-8 col-lg-offset-2 post-card">
+             <a href="http://www.yidizhu.com/articles/a-comparative-study" class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1 post-card">
                 <div class="image-container">
                     <img src="articles/a-comparative-study/image02.jpg" class="img-responsive post-image" alt="">
                 </div>
@@ -84,7 +84,7 @@
                 </div>
              </a>
 
-             <a href="http://www.yidizhu.com/articles/fyp" class="col-lg-8 col-lg-offset-2 post-card">
+             <a href="http://www.yidizhu.com/articles/fyp" class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1 post-card">
                 <div class="image-container">
                     <img src="resources/images/portfolio/yicon.png" class="img-responsive post-image" alt="">
                 </div>
