--- a/404.html
+++ b/404.html
@@ -25,7 +25,8 @@
 </head>
 
 <body id="page-top" class="index">
-<!-- Navigation -->
+
+
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,10 +47,10 @@
                     <a href="http://www.yidizhu.com/#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/blog.html" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    <a href="http://www.yidizhu.com/blog.html">Blog</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="resources/resume.pdf" target="_blank">Resume <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    <a href="resources/resume.pdf">Resume</a>
                 </li>
                 <!--
                 <li class="page-scroll">
