--- a/liyu/index.html
+++ b/liyu/index.html
@@ -1,269 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Yu Li</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- Theme CSS -->
-    <link href="css/main.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-</head>
-
-<body id="page-top" class="index">
-    <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Lotus Li</title>
+        <!-- Bootstrap core CSS -->
+        <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="css/main.css" rel="stylesheet">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+        <!-- Icons -->
+        <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">Lotus Li</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"> <i class="fa fa-bars"></i></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Yu Li</a>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">RESUME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="https://medium.com/yidis-blog">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <!-- Header -->
-    <header>
+        </nav>
+        <!-- Page Content -->
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <!--<img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt=""> -->
-                    <div class="intro-text">
-                        <span class="name">Yu Li</span>
+            <!-- Page Heading -->
+            <header>
+                <div class="row">
+                    <h1 class="col-lg-12 text-center">
+                        Potfolio
                         <hr class="star-light">
-                        <span class="intro">Put your one sentence introduction here.</span>
-                    </div>
+                    </h1>
                 </div>
-            </div>
-        </div>
-    </header>
-    <!-- Portfolio Grid Section -->
-    <section class="success" id="portfolio">
-        <div class="container">
+            </header>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i>Ripple Blossom</i>
-                                <p style="font-size: 12px"><i>(GGJ2017 HK Site, Best Theme Integration Award)</i></p>
+                <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+                    <a href="#">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="#">Project Two</a>
+                                </h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
                             </div>
                         </div>
-                        <img src="images/demo.png" class="img-responsive" alt="">
-                    </a>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-
-    <section class="success" id="about">
-        <div class="container">
+            
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
+                <h2 class="col-lg-12 text-center">
+                About
+                <hr class="star-light">
+                </h2>
             </div>
+
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec tellus dignissim, fringilla ex a, malesuada dui. Nulla ultricies tincidunt urna, sit amet elementum lacus tincidunt ultrices. Suspendisse facilisis eleifend fringilla. Phasellus aliquam auctor mi, at consequat purus porttitor feugiat. Aenean suscipit, sem ut lobortis elementum, mauris velit congue nisl, in ullamcorper odio lacus non eros. Duis vel faucibus massa. Aliquam tempor turpis vel scelerisque faucibus. In non placerat arcu, at pulvinar urna. Proin ac nisl nisl. Mauris nec nunc tincidunt, mattis neque vitae, finibus neque. Duis luctus rutrum erat, sollicitudin accumsan diam ornare sit amet. Phasellus sollicitudin viverra est, nec vestibulum ipsum vehicula et. Nam ex lectus, tincidunt id lectus in, ultrices molestie dolor.</p>
-                </div>
+                <div class="col-lg-2"></div>
                 <div class="col-lg-4">
-                    <p>Nullam condimentum, velit eget ornare elementum, lacus nulla mollis lacus, vel dignissim enim ante ut eros. Praesent sed leo vitae est euismod euismod ac sit amet massa. Cras luctus aliquet orci sed venenatis. Maecenas non metus metus. Integer porta dignissim lectus. Etiam elementum tortor at augue pretium congue. Vestibulum nisi tellus, ornare in lobortis in, lacinia nec felis.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo commodo leo, ut eleifend ligula elementum at. Curabitur quis ligula at felis mattis ultrices vitae venenatis magna. Sed a purus enim. Proin vehicula magna urna, id egestas libero posuere nec. Praesent et tincidunt neque, vitae condimentum elit. Quisque ac pretium ipsum.
+                    </p>
                 </div>
             </div>
         </div>
-    </section>
-
         <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
+        <footer class="py-5">
             <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-6">
-                        <h3>Location</h3>
-                        <p>Entertainment Technology Center, Carnegie Mellon University
-                            <br>Pittsburgh, PA, United States, 15217</p>
-                    </div>
-                    <div class="footer-col col-md-6">
-                        <h3>Contact</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://www.facebook.com/profile.php?id=100009239248280" class="btn-social btn-outline"><i
-                                    class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
-                                    class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i
-                                    class="fa fa-fw fa-weibo"></i></a>
-                            </li>
-                            <li>
-                                <a href="mailto:yul4@andrew.cmu.edu" class="btn-social btn-outline"><i
-                                    class="fa fa-envelope"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                <p class="col-lg-12 text-center">Copyright &copy; Yu Li 2017</p>
             </div>
-        </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; Yu Li 2017
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
-        <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
-        </a>
-    </div>
-    <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Ripple Blossom</h2>
-                            <hr class="star-primary">
-                            <img src="resources/images/portfolio/8-ripple-blossom/title.png" class="img-responsive img-centered" alt="">
-                            <div class="portfolio-description">
-                                <p>This game is made during global game jam 2017, Hong Kong site!</p>
-                                <p>
-                                    Here is the video.
-                                </p>
-                                <p>
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nDf87uHAoeg" frameborder="0" allowfullscreen></iframe>
-                                </p>
-                                <p>
-                                    And here is the download page! You can also play online <a href="rb/index.html">here</a>.
-                                </p>
-                                <p>
-                                    <iframe frameborder="0" src="https://itch.io/embed/113467" width="552" height="167" style="margin: 0 auto"></iframe>
-                                </p>
-                                <h3>Our Team</h3>
-                                <p>
-                                    <img src="resources/images/news/ggj-members.jpg" class="img-responsive">
-                                </p>
-                                <p>
-                                    We have six members in our team, all from the Hong Kong Polytechnic University. Our roles are:
-                                </p>
-                                <p><i>Liu Chang:</i> UI Designer</p>
-                                <p><i>Tian Yuxuan:</i> Artist</p>
-                                <p><i>Zhao Tianyi:</i> Level and audio designer</p>
-                                <p><i>Zhu Yidi (me):</i> Gameplay designer and engineer</p>
-                                <p><i>Peng Tao:</i> System architect</p>
-                                <p><i>Chen Yuji:</i> Artist</p>
-                                <h3>Setting </h3>
-                                <p>
-                                    Our game is set in a pool. Lotus and lotus leaves are floating on the water, and fishes are swimming around.
-                                </p>
-                                <p>
-                                    <img src="resources/images/portfolio/8-ripple-blossom/static.png" class="img-responsive">
-                                </p>
-                                <h3>Game play </h3>
-                                <p>
-                                    When you type in the water, you spawn a wave there. Waves expand and intersect at sleeping lotus. If two waves intersect at a pink lotus, the pink lotus will be waken.
-                                </p>
-                                <h3>Goal </h3>
-                                <p>
-                                    Your goal is to use the power of waves to wave all lotus in the pool. The less waves you spawn, the better.
-                                </p>
-                                <p>
-                                    <img src="resources/images/portfolio/8-ripple-blossom/waken.png" class="img-responsive">
-                                </p>
-                                <h3>Art Style </h3>
-                                <p>
-                                    We created a traditional Chinese art style with low polygon graphics. Every piece of artwork is made during these two days. Chinese instruments are selected for the background music.
-                                </p>
-                            </div>
-                            <div class="item-details">
-                                <p>
-                                    <strong>Date:</strong> January 2017
-                                </p>
-                                <p>
-                                    <strong>Type:</strong> Puzzle Game
-                                </p>
-                                <p>
-                                    <strong>Role:</strong> Gameplay designer and engieer
-                                </p>
-                                <p>
-                                    <a href="http://www.yidizhu.com/ggj2017.html">
-                                        <i class="fa fa-link" aria-hidden="true"></i> Dedicated Page
-                                    </a>
-                                </p>
-                            </div>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <!-- Theme JavaScript -->
-    <script src="js/freelancer.min.js"></script>
-
-</body>
-
+            <!-- /.container -->
+        </footer>
+        <!-- Bootstrap core JavaScript -->
+        <script src="vendor/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.js"></script>
+    </body>
 </html>
