lotus website style

--- a/liyu/index.html
+++ b/liyu/index.html
@@ -12,7 +12,7 @@
         <link href="css/main.css" rel="stylesheet">
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kelly+Slab" rel="stylesheet">
         <!-- Icons -->
         <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     </head>
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">PORTFOLIO</a>
+                            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">RESUME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -47,38 +47,96 @@
         <div class="container">
             <!-- Page Heading -->
             <header>
-                <div class="row">
-                    <h1 class="col-lg-12 text-center">
-                        Potfolio
-                        <hr class="star-light">
-                    </h1>
+                <div class="row" id="portfolio">
+                    <h2 class="col-lg-12 text-center">
+                    Portfolio
+                    <hr class="star-light">
+                    </h2>
                 </div>
             </header>
             <div class="row">
+                <!-- each div is one project -->
                 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
-                    <a href="#">
+                    <a href="project.html">
                         <div class="card h-100">
-                            <img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                            <img class="card-img-top" src="resources/images/1.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">
-                                    <a href="#">Project Two</a>
+                                <i class="fa fa-gamepad" aria-hidden="true"></i> Game Project One
                                 </h4>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
                             </div>
                         </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+                    <a href="project.html">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="resources/images/6.jpg" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                <i class="fa fa-gamepad" aria-hidden="true"></i> Game Project Two
+                                </h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+                    <a href="project.html">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="resources/images/3.jpg" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                <i class="fa fa-gamepad" aria-hidden="true"></i> Game Project Three
+                                </h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+                    <a href="project.html">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="resources/images/4.jpg" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                <i class="fa fa-music" aria-hidden="true"></i> Music One
+                                </h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+                    <a href="project.html">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="resources/images/5.jpg" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                <i class="fa fa-music" aria-hidden="true"></i> Music Two
+                                </h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
             
-            <div class="row">
+            <div class="row" id="about">
                 <h2 class="col-lg-12 text-center">
                 About
                 <hr class="star-light">
                 </h2>
             </div>
-
             <div class="row">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 bio">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo commodo leo, ut eleifend ligula elementum at. Curabitur quis ligula at felis mattis ultrices vitae venenatis magna. Sed a purus enim. Proin vehicula magna urna, id egestas libero posuere nec. Praesent et tincidunt neque, vitae condimentum elit. Quisque ac pretium ipsum.
+                    </p>
+                </div>
+                <div class="col-lg-4 bio">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo commodo leo, ut eleifend ligula elementum at. Curabitur quis ligula at felis mattis ultrices vitae venenatis magna. Sed a purus enim. Proin vehicula magna urna, id egestas libero posuere nec. Praesent et tincidunt neque, vitae condimentum elit. Quisque ac pretium ipsum.
                     </p>
@@ -86,9 +144,37 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="py-5">
+        <footer>
             <div class="container">
-                <p class="col-lg-12 text-center">Copyright &copy; Yu Li 2017</p>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="text-center col-md-8">
+                        <h2 id="contact">Contact</h2>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
+                                class="fa fa-envelope"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
+                                class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/zhuyidiwow" class="btn-social btn-outline"><i
+                                class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
+                                class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i
+                                class="fa fa-fw fa-weibo"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <p id="copyright" class="col-lg-12 text-center">Copyright <span style="font-family:'Cinzel'">&copy;</span> Yu Li 2017</p>
             </div>
             <!-- /.container -->
         </footer>
