--- a/liyu/index.html
+++ b/liyu/index.html
@@ -43,9 +43,13 @@
                 </div>
             </div>
         </nav>
-        <!-- Page Content -->
+
+
+
         <div class="container">
-            <!-- Page Heading -->
+
+
+
             <header>
                 <div class="row" id="portfolio">
                     <h2 class="col-lg-12 text-center">
@@ -54,7 +58,11 @@
                     </h2>
                 </div>
             </header>
+
+
+
             <div class="row">
+
                 <!-- each div is one project -->
                 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
                     <a href="project.html">
@@ -69,6 +77,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
                     <a href="project.html">
                         <div class="card h-100">
@@ -82,6 +91,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
                     <a href="project.html">
                         <div class="card h-100">
@@ -95,6 +105,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
                     <a href="project.html">
                         <div class="card h-100">
@@ -108,6 +119,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
                     <a href="project.html">
                         <div class="card h-100">
@@ -123,6 +135,8 @@
                 </div>
             </div>
             
+
+
             <div class="row" id="about">
                 <h2 class="col-lg-12 text-center">
                 About
@@ -142,8 +156,10 @@
                     </p>
                 </div>
             </div>
+
         </div>
-        <!-- Footer -->
+
+
         <footer>
             <div class="container">
                 <div class="row">
@@ -152,7 +168,7 @@
                         <h2 id="contact">Contact</h2>
                         <ul class="list-inline">
                             <li>
-                                <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
+                                <a href="mailto:yul4@andrew.cmu.edu" class="btn-social btn-outline"><i
                                 class="fa fa-envelope"></i></a>
                             </li>
                             <li>
@@ -176,8 +192,10 @@
                 </div>
                 <p id="copyright" class="col-lg-12 text-center">Copyright <span style="font-family:'Cinzel'">&copy;</span> Yu Li 2017</p>
             </div>
-            <!-- /.container -->
         </footer>
+
+
+
         <!-- Bootstrap core JavaScript -->
         <script src="vendor/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.js"></script>
