--- a/sound-bearier.html
+++ b/sound-bearier.html
@@ -111,7 +111,7 @@
                     <h3>Contact</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
+                            <a href="mailto:yidiz@andrew.cmu.edu" class="btn-social btn-outline"><i
                                     class="fa fa-envelope"></i></a>
                         </li>
                         <li>
@@ -126,12 +126,6 @@
                             <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
                                     class="fa fa-fw fa-twitter"></i></a>
                         </li>
-                        <li>
-                            <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i
-                                    class="fa fa-fw fa-weibo"></i></a>
-                        </li>
-                        
-                        
                     </ul>
                 </div>
             </div>
@@ -141,9 +135,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Yidi Zhu 2017. Adapted from <a
-                        href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>. Full source code available <a
-                        href="https://github.com/zhuyidiwow/zhuyidiwow.github.io">here</a>
+                    Copyright &copy; Yidi Zhu 2017. Re-designed from <a
+                        href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>.
                 </div>
             </div>
         </div>
