--- a/liyu/project.html
+++ b/liyu/project.html
@@ -12,11 +12,12 @@
         <link href="css/main.css" rel="stylesheet">
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kelly+Slab" rel="stylesheet">
         <!-- Icons -->
         <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Lotus Li</a>
@@ -36,7 +37,7 @@
                             <a class="nav-link" href="#">RESUME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +72,7 @@
                     Pellentesque neque sem, hendrerit ut pharetra ultrices, volutpat vitae nunc. Morbi vulputate erat eros, eget posuere ipsum pretium ut. Praesent ac tellus neque. Pellentesque nec fringilla sem, fermentum accumsan lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut vitae tristique odio. Donec odio diam, egestas eu felis vitae, mollis euismod nisl.
                 </p>
 
-                <p class="notes text-center">This is notes</p>
+                <p class="notes">This is notes</p>
                 <p>
                     Proin euismod auctor nisl, id placerat massa blandit sed. Ut aliquam in tellus non varius. Vivamus dignissim tempus erat, ultrices tempus metus pretium sit amet. Vestibulum pulvinar, urna hendrerit pretium dignissim, arcu erat mattis augue, sed tempor quam urna ut tellus. Mauris lobortis dolor in sem egestas, ut pharetra ipsum suscipit. Morbi pulvinar elit at leo tempor iaculis. 
                 </p>
