Writing for the sea

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="http://www.yidizhu.com/blog.html">Blog</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="resources/resume.pdf">Resume</a>
+                    <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
                 </li>
                 <!--
                 <li class="page-scroll">
@@ -70,7 +70,7 @@
             <div class="col-lg-12">
                 <!--<img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt=""> -->
                 <div class="intro-text">
-                    <span class="quote">Crafting artistic games</span>
+                    <span class="quote">Crafting artistic meaningful games</span>
                     <hr class="star-light">
                     <p class="bio col-lg-8 col-lg-offset-2 text-center">
                         Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I dedicate myself to making
