--- a/the-sea.html
+++ b/the-sea.html
@@ -107,7 +107,7 @@
                         </tr>
                     </tbody>
                     </table>
-                    <p class="notes">(As this is a solo project, the GDD is written for myself, where I have so many conversations with myself in this GDD!!!)</p>
+                    <p class="notes">(As this is a solo project, the GDD is written for myself, where I have so many conversations with myself!!!)</p>
                 </div>
                 
                 <hr class="star-primary">
