Project sequence change

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             through relentless iterations.
                         <br><br>
 
-                        As a game developer, I am fascinated with the art of programming and is always willing to
+                        As a game programmer, I am fascinated with the art of programming and is always willing to
                             pick up new skills and experiment with new technologies. I am currently studying computer
                             graphics and C++ independently in my free time.
                     </p>
@@ -116,6 +116,18 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
+                <a href="http://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>The Sea</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">Course Project | <i>Solo Developer </i></p>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item">
                 <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -137,18 +149,6 @@
                     <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Course Project | <i>Programmer </i></p>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item">
-                <a href="http://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>The Sea</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | <i>Solo Developer </i></p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
